// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionDetails /> should match the snapshot 1`] = `
.c0 {
  border-radius: 5px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`<QuestionDetails /> should match the snapshot with shadow 1`] = `
.c0 {
  border-radius: 5px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
}

<div>
  <div
    class="c0"
  />
</div>
`;
